<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarProductoActivity">
    <Toolbar
        android:id="@+id/tb_AddProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:text="@string/mi_kardex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text28"
            android:gravity="center"/>
    </Toolbar>
    <TextView
        android:text="@string/selecione_articulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_views"
        android:layout_marginTop="@dimen/margin_views"/>
    <Spinner
        android:id="@+id/spArticulo_AddProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_views"/>

    <TextView
        android:text="@string/selecione_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_views"/>

    <Spinner
        android:id="@+id/spMaterial_AddProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_views"/>

    <TextView
        android:text="@string/selecione_unidad_metrica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_views"/>

    <Spinner
        android:id="@+id/spUnidadMetrica_AddProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_views"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btVolver_AddProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/buttonRaized"
            android:text="@string/volver"
            android:layout_marginLeft="@dimen/margin_views"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btAddProducto_AddProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/buttonRaizedGreen"
            android:text="@string/addProducto"
            android:layout_marginLeft="@dimen/margin_views"/>
    </LinearLayout>



</LinearLayout>